--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,6 +57,16 @@
 				<string>com.googleusercontent.apps.1092400608704-nbbiieko3tfkkv419q0m0cj353k0fqv8</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>googleSignIn</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.example.smartTaskManager</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
